@@ -3,7 +3,6 @@ package com.nred.nuclearcraft.render.block_entity;
 import com.mojang.blaze3d.vertex.PoseStack;
 import com.nred.nuclearcraft.block_entity.hx.CondenserControllerEntity;
 import com.nred.nuclearcraft.multiblock.hx.HeatExchanger;
-import it.zerono.mods.zerocore.lib.client.render.FluidTankRenderer;
 import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.client.renderer.blockentity.BlockEntityRenderer;
 import net.minecraft.client.renderer.blockentity.BlockEntityRendererProvider;
@@ -12,6 +11,8 @@ import net.minecraft.world.phys.AABB;
 import net.neoforged.api.distmarker.Dist;
 import net.neoforged.api.distmarker.OnlyIn;
 import org.jetbrains.annotations.NotNull;
+
+import static com.nred.nuclearcraft.render.RenderHelper.renderFluid;
 
 @OnlyIn(Dist.CLIENT)
 public record RenderMultiblockCondenser(BlockEntityRendererProvider.Context context) implements BlockEntityRenderer<CondenserControllerEntity> {
@@ -27,16 +28,17 @@ public record RenderMultiblockCondenser(BlockEntityRendererProvider.Context cont
             return;
         }
 
+        int xSize = hx.getInteriorLengthX() - 1, ySize = hx.getInteriorLengthY() - 1, zSize = hx.getInteriorLengthZ() - 1;
+        if (xSize < 1 || zSize < 1) {
+            return;
+        }
+
         poseStack.pushPose();
 
         BlockPos posOffset = hx.getExtremeInteriorCoord(false, false, false).subtract(controller.getBlockPos());
         poseStack.translate(posOffset.getX(), posOffset.getY(), posOffset.getZ());
 
-
-        int xSize = hx.getInteriorLengthX(), ySize = hx.getInteriorLengthY(), zSize = hx.getInteriorLengthZ();
-
-        FluidTankRenderer.Single renderer = new FluidTankRenderer.Single(hx.shellTanks.get(0).getCapacity(), 0, 0, 0, xSize, ySize, zSize);
-        renderer.render(poseStack, bufferSource, packedLight, hx.shellTanks.get(0).getFluid());
+        renderFluid(poseStack, bufferSource, packedLight, hx.shellTanks.getFirst().getFluid(), hx.shellTanks.getFirst().getCapacity(), xSize, ySize, zSize);
 
         poseStack.popPose();
     }
@@ -45,8 +47,8 @@ public record RenderMultiblockCondenser(BlockEntityRendererProvider.Context cont
     @OnlyIn(Dist.CLIENT)
     public @NotNull AABB getRenderBoundingBox(CondenserControllerEntity blockEntity) {
         if (blockEntity.getMultiblockController().isPresent()) {
-            HeatExchanger turbine = blockEntity.getMultiblockController().get();
-            return turbine.getBoundingBox().getAABB().inflate(turbine.getInteriorLengthX(), turbine.getInteriorLengthY(), turbine.getInteriorLengthZ());
+            HeatExchanger hx = blockEntity.getMultiblockController().get();
+            return hx.getBoundingBox().getAABB().inflate(hx.getInteriorLengthX(), hx.getInteriorLengthY(), hx.getInteriorLengthZ());
         }
         return BlockEntityRenderer.super.getRenderBoundingBox(blockEntity);
     }
